@@ -39,6 +39,9 @@
             <version>0.0.8</version>
             <configuration>
                 <mainClass>com.onriderentals.Launcher</mainClass>
+                <options>
+                    <option>--enable-native-access=javafx.graphics</option>
+                </options>
             </configuration>
         </plugin>
         <plugin>
